--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,4 +2,9 @@
     width: 100px;
     height: 75px;
     font-size: larger;
+    outline: none;
+}
+
+.Button:hover {
+    background-color: lightgray;
 }
