--- a/src/components/Screen/Screen.module.css
+++ b/src/components/Screen/Screen.module.css
@@ -2,3 +2,23 @@
     width: 100%;
     height: 100px;
 }
+
+.PrevResult {
+    height: 40%;
+    text-align: left;
+    font-size: 18px;
+    position: relative;
+    margin-left: 10px;
+}
+
+.Result {
+    height: 60%;
+    font-size: 36px;
+    position: relative;
+}
+
+.Result span {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
