--- a/src/containers/Buttons/Buttons.module.css
+++ b/src/containers/Buttons/Buttons.module.css
@@ -6,3 +6,8 @@
         "functions operators"
         "buttons operators";
 }
+
+.Button.Active {
+    background-color: lightgray;
+    border: 1px solid lightcoral;
+}
